[package]
name = "discv5-hole-punching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# discv5.2 branch
# https://github.com/sigp/discv5/commits/discv5.2/
#discv5 = { git = "https://github.com/sigp/discv5.git", rev = "04f2dc62142481bec3f178542fa10405dc50ea6c"}

# Merge master into discv5.2
# https://github.com/sigp/discv5/pull/234
discv5 = { git = "https://github.com/ackintosh/discv5.git", rev = "c58677e387f27bd075b671ea5d5410a64ffd9bb4"}

if-addrs = "0.11"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
