[package]
name = "discv5-hole-punching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# discv5.2 branch
# https://github.com/sigp/discv5/commits/discv5.2/
discv5 = { git = "https://github.com/sigp/discv5.git", branch = "discv5.2"}

if-addrs = "0.11"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
